res/examples/invalid/if_else_expression_with_unit_expr_as_cond_then_else.eg
if () { () } else { () };

// out: TypeError: mismatched types: expected type `bool` but received `()`